exports[`Setup display component rendering Renders as expected (compared to a snapshot) when passed 2 proxy connections 1`] = `
<div
  className="Connection-panel">
  <p
    className="Connection-subHead">
    Spdz Proxy Servers
  </p>
  <div
    className="ProxyStatus-row">
    <div
      className="ProxyStatus-col1 ProxyStatus-marker-failure" />
    <div
      className="ProxyStatus-col2 smallText">
      http://spdzProxy.one:4000
    </div>
  </div>
  <div
    className="ProxyStatus-row">
    <div
      className="ProxyStatus-col1 ProxyStatus-marker-connected" />
    <div
      className="ProxyStatus-col2 smallText">
      http://spdzProxy.two:4000
    </div>
  </div>
</div>
`;

exports[`Setup display component rendering Renders as expected (compared to a snapshot) when passed no proxy connections 1`] = `
<div
  className="Connection-panel">
  <p
    className="Connection-subHead">
    Spdz Proxy Servers
  </p>
</div>
`;
